Bug 1721707 [Wayland] Build fix for X11 only environment r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D121460